--- a/www.nass.gov.ng/517e92a997c1cf4107ce1be46fae54d3b77495a9.yml
+++ b/www.nass.gov.ng/517e92a997c1cf4107ce1be46fae54d3b77495a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 23:10:04 GMT
+    - Sun, 25 Mar 2018 17:26:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=n%2CCrOPkMLlXrZz9uc4ajz0; path=/
+    - PHPSESSID=wOIgWW47hFjmHfl1hosty3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 23:10:04 GMT
+recorded_at: Sun, 25 Mar 2018 17:26:26 GMT
