--- a/www.nass.gov.ng/bf932b469691d5a5f9ba244070a3e0cdd81b4ea1.yml
+++ b/www.nass.gov.ng/bf932b469691d5a5f9ba244070a3e0cdd81b4ea1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 23:11:42 GMT
+    - Sun, 25 Mar 2018 17:27:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GBpzNTlKbLCfNJ3Pd44va0; path=/
+    - PHPSESSID=kCDkPIpGRvEEWzFi1DH%2CT2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 23:11:42 GMT
+recorded_at: Sun, 25 Mar 2018 17:27:52 GMT
