--- a/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
+++ b/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 23:13:09 GMT
+    - Sun, 25 Mar 2018 17:29:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Fd5Ns9w7KOl5-yGWFQcdj2; path=/
+    - PHPSESSID=Xx4q6CcPs%2Crl7kNPk2kw41; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 23:13:10 GMT
+recorded_at: Sun, 25 Mar 2018 17:29:19 GMT
