--- a/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
+++ b/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 23:16:47 GMT
+    - Sun, 25 Mar 2018 17:32:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=L1UUB5JqgXtidq%2CDu9iJp2; path=/
+    - PHPSESSID=VFvauWFDpAurLQOR31q3K3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 23:16:47 GMT
+recorded_at: Sun, 25 Mar 2018 17:32:17 GMT
