200 OK http://www.nass.gov.ng/mp/profile/842

--- a/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
+++ b/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Mar 2018 23:17:44 GMT
+    - Sun, 25 Mar 2018 17:33:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CwJGA7mzk3Nai%2C418B2XZ0; path=/
+    - PHPSESSID=tq85ottNmK%2CXNjVlMK%2C391; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Mar 2018 23:17:44 GMT
+recorded_at: Sun, 25 Mar 2018 17:33:29 GMT
