--- a/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
+++ b/www.nass.gov.ng/b6e10f2ae6b49d52dd64ca9d508600fd7dab7211.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 00:15:04 GMT
+    - Sun, 25 Mar 2018 18:33:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ancn0cvQWkBFDAEm8XgKT1; path=/
+    - PHPSESSID=VTuE6Ud-n7sa4XG%2Ci6rKd2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 00:15:04 GMT
+recorded_at: Sun, 25 Mar 2018 18:33:26 GMT
