--- a/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
+++ b/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 00:26:30 GMT
+    - Sun, 25 Mar 2018 18:41:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CkgoEm0-HJLmhjC6eFIeC3; path=/
+    - PHPSESSID=NvvphNOUP0xz3jCpUAwj02; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 00:26:30 GMT
+recorded_at: Sun, 25 Mar 2018 18:41:55 GMT
