200 OK http://www.nass.gov.ng/mp/profile/839

--- a/www.nass.gov.ng/9adc49d36b938c5d8890be9680ab3d62c71bf5dd.yml
+++ b/www.nass.gov.ng/9adc49d36b938c5d8890be9680ab3d62c71bf5dd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 02:43:11 GMT
+    - Sun, 25 Mar 2018 20:54:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VkVyMTeHvYMoZd1DYBcj32; path=/
+    - PHPSESSID=ap8%2CWw9JVy8t28PSAqJOx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 02:43:11 GMT
+recorded_at: Sun, 25 Mar 2018 20:54:59 GMT
