200 OK http://www.nass.gov.ng/mp/profile/968

--- a/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
+++ b/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 16:03:40 GMT
+    - Tue, 27 Mar 2018 20:36:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kyuflhKyuhm%2CG9oBIJLrV1; path=/
+    - PHPSESSID=zakVba5wsAhSBbq929SVW3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 16:03:40 GMT
+recorded_at: Tue, 27 Mar 2018 20:36:04 GMT
